--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sliva</title>
+    <title></title>
   </head>
   <body>
   <header>
@@ -11,11 +11,9 @@
   </header>
   <div class="upper-banner">
     <div class="banner-info">
-      <div class="app-text">
-        МОТИВАЦИОННОЕ МОБИЛЬНОЕ ПРИЛОЖЕНИЕ
-      </div>
+      <div class="app-text">Мотивационное мобильное приложение</div>
       <div class="site-link">
-        pryanik.<span class="site-link-color">online</span>
+        pryanik.<span class="site-postfix">online</span>
       </div>
     </div>
   </div>
