--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/app.js"></script>
   </body>
 </html>
