--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <div class="upper-banner">
     <div class="banner-info">
       <div class="app-text">Мотивационное мобильное приложение</div>
-      <div class="site-link">
-        pryanik.<span class="site-postfix">online</span>
+      <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
+      <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
+      <div class="main-buttons">
+        <a href="/" class="main-buttons__primary">Узнать больше</a>
+        <a href="/" class="main-buttons__secondary">Стоимость</a>
       </div>
     </div>
   </div>
