--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <a href="/" class="main-buttons__secondary">Стоимость</a>
       </div>
     </div>
+    <div class="background-img">
+    </div>
   </div>
   <script type="module" src="/app.js"></script>
   </body>
