--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
   <header>
     Шапка
   </header>
-  <div class="upper-banner">
-    <div class="banner-info">
-      <div class="app-text">Мотивационное мобильное приложение</div>
-      <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
-      <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
-      <div class="main-buttons">
-        <a href="/" class="main-buttons__primary">Узнать больше</a>
-        <a href="/" class="main-buttons__secondary">Стоимость</a>
+  <div class="container">
+    <div class="banners-wrap">
+      <img src="/assets/img/text-banner-img.png" class="text-banner-img" alt="text-banner-img">
+      <div class="upper-banner">
+        <div class="banner-info">
+          <div class="app-text">Мотивационное мобильное приложение</div>
+          <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
+          <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
+          <div class="main-buttons">
+            <a href="/" class="main-buttons__primary">Узнать больше</a>
+            <a href="/" class="main-buttons__secondary">Стоимость</a>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="background-img">
+      <div class="text-banner">
+        ваши проблемы - наше решение
+      </div>
     </div>
   </div>
   <script type="module" src="/app.js"></script>
