--- a/index.html
+++ b/index.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title></title>
-  </head>
-  <body>
-  <header>
+</head>
+<body>
+<header>
     Шапка
-  </header>
-  <div class="container">
+</header>
+<div class="container">
     <div class="banners-wrap">
-      <img src="/assets/img/text-banner-img.png" class="text-banner-img" alt="text-banner-img">
-      <div class="upper-banner">
-        <div class="banner-info">
-          <div class="app-text">Мотивационное мобильное приложение</div>
-          <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
-          <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
-          <div class="main-buttons">
-            <a href="/" class="main-buttons__primary">Узнать больше</a>
-            <a href="/" class="main-buttons__secondary">Стоимость</a>
-          </div>
+        <img src="/assets/img/text-banner-img.png" class="text-banner-img" alt="text-banner-img">
+        <div class="upper-banner">
+            <div class="banner-info">
+                <div class="app-text">Мотивационное мобильное приложение</div>
+                <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
+                <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
+                <div class="main-buttons">
+                    <a href="/" class="main-buttons__primary">Узнать больше</a>
+                    <a href="/" class="main-buttons__secondary">Стоимость</a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="text-banner">
-        ваши проблемы - наше решение
-      </div>
+        <div class="text-banner">
+            <div class="text-banner-header">ваши проблемы - наше решение</div>
+            <div class="text-banner-content">
+                У вас низкие продажи товаров? Отсутствует продвижение новинок в торговых точках? Наше приложение <span
+                    class="text-banner-content__style">закроет эти болевые точки</span> и станет эффективным
+                инструментом для различных пользователей
+            </div>
+            <div class="text-banner-info">
+                <div class="content-box">
+                    <div class="content-box__header">
+                        Для продавцов <img src="/assets/img/smile-img.png" class="content-box-img__first" alt="smile">
+                    </div>
+                    <div class="content-box__text">стимулирование покупок и увеличение продаж</div>
+                </div>
+                <div class="content-box">
+                    <div class="content-box__header">
+                        Для покупателей <img src="/assets/img/money-img.png" class="content-box-img__second"
+                                             alt="smile">
+                    </div>
+                    <div class="content-box__text">выбор в пользу вашего бренда и повышение лояльности</div>
+                </div>
+            </div>
+            <img src="/assets/img/arrow.svg" class="arrow-img" alt="arrow">
+        </div>
+        <div class="client-info">
+            <div class="client-info-solves">
+                <div class="our-clients">наши клиенты</div>
+                <div class="our-solves">Что мы решаем?</div>
+            </div>
+            <div class="client-problems">Проблема у всех клиентов одна - низкие продажи на высокомаржинальные товары
+            </div>
+            <div class="slider-wrap">
+                <div class="slider">1</div>
+                <div class="slider">2</div>
+                <div class="slider">3</div>
+                <div class="slider">4</div>
+                <div class="slider">5</div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="module" src="/app.js"></script>
-  </body>
+</div>
+<script type="module" src="/app.js"></script>
+</body>
 </html>
