added slider blocks (evening lesson)

--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
             <div class="slider slider_empty">logo</div>
         </div>
     </div>
+    <div class="app-personalisation">
+        <div class="app-personalisation-wrap">
+            <div class="app-personalisation-content">
+                <div>персонализация</div>
+                <div>Адаптируется под вас</div>
+                <p>Гибкий дизайн и персонализированная настройка функционала сделают приложение уникальным, исключительно под ваш бренд</p>
+                <div>Адаптация дизайна</div>
+                <div>Изменение цветовой схемы, которая соответствует вашему бренду</div>
+                <div></div>
+                <div>Выбор модулей</div>
+            </div>
+        </div>
+    </div>
 </div>
 <script type="module" src="/app.js"></script>
 </body>
