--- a/index.html
+++ b/index.html
@@ -10,65 +10,73 @@
     Шапка
 </header>
 <div class="container">
-    <div class="banners-wrap">
-        <img src="/assets/img/text-banner-img.png" class="text-banner-img" alt="text-banner-img">
-        <div class="upper-banner">
-            <div class="banner-info">
-                <div class="app-text">Мотивационное мобильное приложение</div>
-                <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
-                <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
-                <div class="main-buttons">
-                    <a href="/" class="main-buttons__primary">Узнать больше</a>
-                    <a href="/" class="main-buttons__secondary">Стоимость</a>
-                </div>
+
+    <div class="upper-banner">
+        <div class="banner-info">
+            <div class="app-text">Мотивационное мобильное приложение</div>
+            <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
+            <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
+            <div class="main-buttons">
+                <a href="/" class="main-buttons__primary">Узнать больше</a>
             </div>
         </div>
-        <div class="text-banner">
-            <div class="text-banner-header">ваши проблемы - наше решение</div>
-            <div class="text-banner-content">
+    </div>
+    <div class="text-banner">
+        <div class="text-banner-wrap">
+            <div class="text-banner__header">ваши проблемы - наше решение</div>
+            <div class="text-banner__content">
                 У вас низкие продажи товаров? Отсутствует продвижение новинок в торговых точках? Наше приложение <span
-                    class="text-banner-content__style">закроет эти болевые точки</span> и станет эффективным
+                    class="text-banner__content-style">закроет эти болевые точки</span> и станет эффективным
                 инструментом для различных пользователей
             </div>
-            <div class="text-banner-info">
-                <div class="content-box">
-                    <div class="content-box__header">
-                        Для продавцов <img src="/assets/img/smile-img.png" class="content-box-img__first" alt="smile">
-                    </div>
-                    <div class="content-box__text">стимулирование покупок и увеличение продаж</div>
+        </div>
+        <div class="text-banner-info">
+            <div class="content-box">
+                <div class="content-box__header">
+                    Для продавцов <img src="/assets/img/smile-img.png" class="content-box-img__first" alt="smile">
                 </div>
-                <div class="content-box">
-                    <div class="content-box__header">
-                        Для покупателей <img src="/assets/img/money-img.png" class="content-box-img__second"
-                                             alt="smile">
-                    </div>
-                    <div class="content-box__text">выбор в пользу вашего бренда и повышение лояльности</div>
-                </div>
+                <div class="content-box__text">стимулирование покупок и увеличение продаж</div>
             </div>
-            <img src="/assets/img/arrow.svg" class="arrow-img" alt="arrow">
+            <div class="content-box">
+                <div class="content-box__header">
+                    Для покупателей <img src="/assets/img/money-img.png" class="content-box-img__second"
+                                         alt="smile">
+                </div>
+                <div class="content-box__text">выбор в пользу вашего бренда и повышение лояльности</div>
+            </div>
         </div>
     </div>
     <div class="client-info">
         <div class="client-info-solves">
             <div class="our-clients">наши клиенты</div>
-            <div class="our-solves">Что мы решаем?</div>
-        </div>
-        <div class="client-problems">Проблема у всех клиентов одна - низкие продажи на высокомаржинальные товары
+            <div class="our-solves">Мы решили эти задачи</div>
         </div>
         <div class="slider-wrap">
             <div class="slider slider_motul">
-                <img src="/assets/img/motul-logo.svg" alt="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="92" height="21" fill="none">
+                    <path fill="#fff"
+                          d="M23.61 0v19.391h-6.39l.354-8.461-3.477 8.461h-4.26L8.62 10.805l-2.062 8.57H0L5.36 0h6.95l1.082 7.877L16.494 0h7.117ZM59.5 6.159l-2.831-.125-1.452 13.357h-6.863l1.562-13.33-2.607.098L42.93 0H60.1l-.6 6.159ZM68.554.78l-1.317 11.795c-.041.713.276 1.425.897 1.728.64.244 1.438.146 1.937-.345.438-.388.599-.914.719-1.465L72.363.78h6.748l-1.456 12.993c-.32 1.852-1.16 3.604-2.775 4.786-2.337 1.727-5.45 1.991-8.463 1.566-2.393-.45-5.127-2.038-5.907-4.52-.338-.895-.279-1.971-.279-2.949L61.629.78h6.925ZM86.453 13.765H92l-1.635 6.004H78.55L81.005.78h7.021l-1.573 12.985Z"/>
+                    <path fill="#fff" fill-rule="evenodd"
+                          d="m40.895 2.034-.7-.55C38.7.73 37.004.425 35.248.387 31.175.2 27.224 2.603 25.549 6.45c-1.438 3.458-.879 7.955 1.876 10.622 3.111 3.134 8.42 4.03 12.391 2.114 3.255-1.526 5.59-4.924 5.648-8.562.041-1.1.022-2.263-.439-3.176l-4.13-5.414Zm-8.641 6.531c.758-1.364 2.175-2.077 3.672-1.871.897.162 1.835.793 2.234 1.69.6 1.176.56 2.97-.18 4.069-.717 1.18-1.935 1.87-3.311 1.749a3.217 3.217 0 0 1-2.535-1.75c-.68-1.16-.518-2.746.12-3.887Z"
+                          clip-rule="evenodd"/>
+                </svg>
                 <div class="slider-text__wrap">
                     <div class="slider__title">Motul</div>
-                    <p class="slider__description">Производитель моторных масел, промышленных и иных смазочных материалов</p>
+                    <p class="slider__description">Производитель моторных масел, промышленных и иных смазочных
+                        материалов</p>
                     <a class="slider__link" href="/">Посмотреть кейс</a>
                 </div>
             </div>
             <div class="slider slider_liqui">
-                <img src="/assets/img/liqui-logo.svg" alt="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="84" height="54" fill="none">
+                    <path fill="#fff" fill-rule="evenodd"
+                          d="M51.228 29.905h6.396v17.243h7.65v5.455H51.228M60.948 29.905h7.399l3.887 6.709 3.763-6.709h7.398l-8.151 12.1v10.598h-6.082V42.006M.252 29.905h5.58l6.02 8.59 5.894-8.59h5.643v22.698h-5.643V38.118l-5.393 7.211H11.35l-5.517-7.211v14.485H.252M24.679 41.254c0-6.684 5.642-12.101 12.602-12.101 6.961 0 12.604 5.417 12.604 12.1 0 6.684-5.643 12.103-12.604 12.103-6.96 0-12.602-5.419-12.602-12.102Zm6.646 0c0-3.636 2.667-6.584 5.956-6.584 3.29 0 5.957 2.948 5.957 6.584 0 3.636-2.666 6.583-5.957 6.583-3.29 0-5.956-2.947-5.956-6.584ZM15.196 1.187h6.396v22.698h-6.396M73.447 1.187h6.458v22.698h-6.458M.252 1.187h5.79v17.306h7.586v5.392H.252M50.31 1.187h6.332v14.296c0 2.147 1.852 3.887 4.14 3.887 2.284 0 4.138-1.74 4.138-3.887V1.187h6.269l.02 16.365s-.02 7.023-10.428 7.023c-10.41 0-10.472-7.023-10.472-7.023M44.205 26.143l-2.555-2.79a12.972 12.972 0 0 1-5.648 1.28c-6.962 0-12.604-5.418-12.604-12.102C23.398 5.848 29.04.43 36.002.43c6.96 0 12.602 5.419 12.602 12.102 0 3.027-1.157 5.794-3.07 7.917l3.25 3.437m-9.562-10.032 1.912 1.944c.5-.964.825-2.075.825-3.266 0-3.637-2.668-6.583-5.957-6.583-3.29 0-5.957 2.946-5.957 6.583 0 3.636 2.667 6.584 5.957 6.584.573 0 1.112-.105 1.63-.278l-2.58-2.852"
+                          clip-rule="evenodd"/>
+                </svg>
                 <div class="slider-text__wrap">
                     <div class="slider__title">Liqui Moly</div>
-                    <p class="slider__description">Производитель автомобильных масел, смазочных материалов и присадок</p>
+                    <p class="slider__description">Производитель автомобильных масел, смазочных материалов и
+                        присадок</p>
                     <a class="slider__link" href="/">Посмотреть кейс</a>
                 </div>
             </div>
@@ -91,7 +99,14 @@
                 </div>
             </div>
             <div class="slider slider_sika">
-                <img src="/assets/img/sika-logo.svg" alt="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="70" height="60" fill="none">
+                    <path fill="#EAF0FF"
+                          d="M65.788 35.168c.561 0 1.123.139 1.685.416.561.278.983.694 1.263 1.249.281.555.422 1.11.422 1.665 0 .554-.14 1.11-.422 1.664-.28.555-.702.971-1.263 1.249a3.775 3.775 0 0 1-1.685.416 3.775 3.775 0 0 1-1.685-.416 2.739 2.739 0 0 1-1.264-1.249c-.281-.555-.422-1.11-.422-1.664 0-.555.14-1.11.422-1.665.28-.555.702-.971 1.264-1.249a3.775 3.775 0 0 1 1.685-.416Zm0 .555c-.492 0-.913.139-1.405.347-.42.208-.772.555-1.053 1.04-.28.486-.35.902-.35 1.388 0 .485.14.97.35 1.387.281.416.632.763 1.053 1.04.422.278.913.347 1.405.347.491 0 .983-.139 1.404-.347a3.74 3.74 0 0 0 1.053-1.04c.28-.416.351-.902.351-1.387 0-.486-.14-.972-.351-1.388a3.74 3.74 0 0 0-1.053-1.04c-.492-.208-.913-.347-1.404-.347Zm-1.475 4.647v-3.607h1.264c.421 0 .772 0 .913.07.21.07.35.208.491.346.14.14.14.347.14.555 0 .278-.07.486-.28.694-.21.208-.421.278-.773.347.14.07.211.139.281.208.14.139.351.347.562.694l.421.693h-.702l-.35-.555c-.282-.416-.492-.693-.633-.832-.14-.07-.28-.139-.491-.139h-.351v1.526h-.492Zm.562-2.011h.702c.351 0 .562-.07.702-.139.14-.07.21-.208.21-.416 0-.139 0-.208-.07-.278-.07-.069-.14-.138-.28-.208-.14-.07-.281-.07-.562-.07h-.702v1.11ZM35.035 0 70 60H0L35.035 0Z"/>
+                    <path fill="#F8AD00"
+                          d="M29.769 41.619h-2.387c-.351 0-.632.277-.703.624l-1.965 10.82c-.07.348.14.625.491.625h2.387c.351 0 .632-.277.702-.624l1.966-10.821c.07-.347-.14-.624-.491-.624ZM31.244 37.18l.35-2.081c.07-.347-.14-.625-.49-.625h-2.388c-.351 0-.632.278-.702.625l-.351 2.08c-.07.347.14.625.491.625h2.387c.281 0 .632-.278.703-.624ZM50.06 51.399c-1.755.07-2.738-.763-2.738-1.596 0-1.11 1.755-1.456 3.16-1.456 1.404.07 2.386.347 2.386 1.456 0 .833-1.334 1.527-2.808 1.596Zm6.88 1.665c.141-.416.282-1.526.282-1.526 0-.14.07-.625-.352-.694-.42-.139-1.334 0-1.334-.624 0-.208.773-3.815.843-4.995.07-1.179 0-2.705-1.896-3.468-.702-.277-6.95-.208-6.95-.208-.352 0-.703.208-.773.555l-.28 1.318c-.07.278.21.555.561.555h4.353c1.545 0 2.106.277 2.106.555 0 .277.07 1.734-.561 1.734-.562 0-8.355-1.526-8.355 3.538 0 .901-1.475 1.179-1.896.624-.421-.624-2.387-2.567-2.457-2.913 0-.347 3.37-2.081 4.072-4.925.07-.278.14-.971-.421-.971h-2.037c-.28 0-.631.069-.983.693-1.404 3.191-4.985 3.885-4.774 2.705.07-.416 4.213-22.96 4.213-22.96.07-.346-.14-.623-.492-.623h-2.387c-.35 0-.632.277-.702.624l-5.687 30.936c-.07.347.14.625.491.625h2.388c.35 0 .632-.278.702-.625l.702-3.468c.21-.486.491-.694 1.123-.694 2.317 0 3.581 4.995 5.968 4.995 1.475 0 3.16-1.04 3.51-1.04.703 0 1.054 1.04 3.37 1.04 2.037 0 3.581-.763 4.003-.763.421 0 1.334.485 1.755.555 1.123.346 1.755-.14 1.896-.555Z"/>
+                    <path fill="#F8AD00"
+                          d="M12.708 53.896c.14-.07.28-.208.35-.208h.422c1.685.485 7.653 2.011 9.128-4.856l4.072-21.988c0-.278.491-3.052 4.423-1.734 1.334.416 1.404-.208 1.474-.347l.632-2.567c0-.763-.561-.555-1.685-.763-.842-.138-1.123.278-1.334.417-.21.069-.913-.07-1.896-.14-.631 0-4.212.417-4.914 3.885l-3.932 21.087c-.21.624-.14 6.59-7.021 3.26-1.194-.555-1.615-.277-1.755.347-.07.416-.422 2.566-.492 3.052 0 .208.14.486.492.486.35.069.912.138 1.263.208.281 0 .562 0 .773-.14Z"/>
+                </svg>
                 <div class="slider-text__wrap">
                     <div class="slider__title">Sika</div>
                     <p class="slider__description">Швейцарская компания, производящая материалы для строительства</p>
@@ -106,7 +121,8 @@
             <div class="app-personalisation-content">
                 <div>персонализация</div>
                 <div>Адаптируется под вас</div>
-                <p>Гибкий дизайн и персонализированная настройка функционала сделают приложение уникальным, исключительно под ваш бренд</p>
+                <p>Гибкий дизайн и персонализированная настройка функционала сделают приложение уникальным,
+                    исключительно под ваш бренд</p>
                 <div>Адаптация дизайна</div>
                 <div>Изменение цветовой схемы, которая соответствует вашему бренду</div>
                 <div></div>
