app-personalisation block finished, app-info block added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     Шапка
 </header>
 <div class="container">
-
     <div class="upper-banner">
         <div class="banner-info">
-            <div class="app-text">Мотивационное мобильное приложение</div>
+            <div class="subheader">Мотивационное мобильное приложение</div>
             <div class="site-link">pryanik.<span class="site-link__postfix">online</span></div>
             <div class="app-description">Готовая бонусная программа лояльности для продавцов и покупателей</div>
             <div class="main-buttons">
@@ -23,7 +22,7 @@
     </div>
     <div class="text-banner">
         <div class="text-banner-wrap">
-            <div class="text-banner__header">ваши проблемы - наше решение</div>
+            <div class="subheader">ваши проблемы - наше решение</div>
             <div class="text-banner__content">
                 У вас низкие продажи товаров? Отсутствует продвижение новинок в торговых точках? Наше приложение <span
                     class="text-banner__content-style">закроет эти болевые точки</span> и станет эффективным
@@ -47,8 +46,8 @@
         </div>
     </div>
     <div class="client-info">
-        <div class="client-info-solves">
-            <div class="our-clients">наши клиенты</div>
+        <div class="client-info-solves headers-color">
+            <div class="subheader subheader-color">наши клиенты</div>
             <div class="our-solves">Мы решили эти задачи</div>
         </div>
         <div class="slider-wrap">
@@ -119,15 +118,24 @@
     <div class="app-personalisation">
         <div class="app-personalisation-wrap">
             <div class="app-personalisation-content">
-                <div>персонализация</div>
-                <div>Адаптируется под вас</div>
-                <p>Гибкий дизайн и персонализированная настройка функционала сделают приложение уникальным,
+                <div class="app-personalisation-content__title headers-color">персонализация</div>
+                <div class="app-personalisation-content__header headers-color">Адаптируется под вас</div>
+                <p class="app-personalisation-content__text text-content-color">Гибкий дизайн и персонализированная
+                    настройка функционала сделают приложение уникальным,
                     исключительно под ваш бренд</p>
-                <div>Адаптация дизайна</div>
-                <div>Изменение цветовой схемы, которая соответствует вашему бренду</div>
-                <div></div>
-                <div>Выбор модулей</div>
+                <div class="app-personalisation-content__subheader headers-color">Адаптация дизайна</div>
+                <div class="app-personalisation-content__subtext text-content-color">Изменение цветовой схемы, которая
+                    соответствует вашему бренду
+                </div>
+                <div class="app-personalisation-content__line"></div>
+                <div class="app-personalisation-content__subheader headers-color">Выбор модулей</div>
             </div>
+        </div>
+    </div>
+    <div class="app-info">
+        <div class="app-info-wrap">
+            <div class="app-info-wrap__header">Приложение iOS и Android</div>
+            <div class="subheader">Для пользователей</div>
         </div>
     </div>
 </div>
