layout refactor + new blocks

--- a/index.html
+++ b/index.html
@@ -24,26 +24,43 @@
         <div class="text-banner-wrap">
             <div class="subheader">ваши проблемы - наше решение</div>
             <div class="text-banner__content">
-                У вас низкие продажи товаров? Отсутствует продвижение новинок в торговых точках? Наше приложение <span
-                    class="text-banner__content-style">закроет эти болевые точки</span> и станет эффективным
-                инструментом для различных пользователей
+                <div>У вас низкие продажи?</div>
+                <div>Мы придумали как мотивировать сотрудников с помощью простой механики:</div>
             </div>
         </div>
         <div class="text-banner-info">
             <div class="content-box">
-                <div class="content-box__header">
-                    Для продавцов <img src="/assets/img/smile-img.png" class="content-box-img__first" alt="smile">
+                <div class="content-box__arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="131" height="53" fill="none">
+                        <path fill="#53EAF0"
+                              d="M129.388 16.773a1.5 1.5 0 0 0 1.061-1.838l-3.493-13.04a1.5 1.5 0 1 0-2.898.776l3.105 11.592-11.591 3.105a1.499 1.499 0 1 0 .776 2.897l13.04-3.492ZM.719 50.043a1.5 1.5 0 1 0 2.562 1.561L.719 50.043ZM129.75 14.025C93.638-6.83 32.397-1.942.72 50.043l2.56 1.561C34.004 1.19 93.363-3.524 128.25 16.623l1.5-2.598Z"/>
+                    </svg>
                 </div>
-                <div class="content-box__text">стимулирование покупок и увеличение продаж</div>
+                <div class="content-box__header">
+                    Сканируй чек <img src="/assets/img/smile-img.png" class="content-box-img" alt="smile">
+                </div>
+                <div class="content-box__text">Пользователь сканирует чек с проданным товаром</div>
+            </div>
+            <div class="content-box">
+                <div class="content-box__arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="131" height="53" fill="none">
+                        <path fill="#53EAF0"
+                              d="M129.388 16.773a1.5 1.5 0 0 0 1.061-1.838l-3.493-13.04a1.5 1.5 0 1 0-2.898.776l3.105 11.592-11.591 3.105a1.499 1.499 0 1 0 .776 2.897l13.04-3.492ZM.719 50.043a1.5 1.5 0 1 0 2.562 1.561L.719 50.043ZM129.75 14.025C93.638-6.83 32.397-1.942.72 50.043l2.56 1.561C34.004 1.19 93.363-3.524 128.25 16.623l1.5-2.598Z"/>
+                    </svg>
+                </div>
+                <div class="content-box__header">
+                    Получай кэшбек <img src="/assets/img/smile-img.png" class="content-box-img" alt="smile">
+                </div>
+                <div class="content-box__text">И получает кэшбек в виде процентов или баллов</div>
             </div>
             <div class="content-box">
                 <div class="content-box__header">
-                    Для покупателей <img src="/assets/img/money-img.png" class="content-box-img__second"
-                                         alt="smile">
+                    Трать на подарки <img src="/assets/img/smile-img.png" class="content-box-img" alt="smile">
                 </div>
-                <div class="content-box__text">выбор в пользу вашего бренда и повышение лояльности</div>
+                <div class="content-box__text">Баллы можно вывести или потратить на сертификаты</div>
             </div>
         </div>
+        <div class="prize-fond">Призовой фонд компании<img src="/assets/img/smile-img.png" alt="smile"></div>
     </div>
     <div class="client-info">
         <div class="client-info-solves headers-color">
@@ -137,7 +154,56 @@
             <div class="app-info-wrap__header">Приложение iOS и Android</div>
             <div class="subheader">Для пользователей</div>
         </div>
+        <div class="content-wrap">
+            <div class="content-left">
+                <div class="content-header">Сканирование чеков</div>
+                <div class="content-text">автоматическое добавление информации о покупке или продаже в приложение</div>
+                <div class="content-line__primary"></div>
+                <div class="content-header">Каталог</div>
+                <div class="content-text">ассортимент бренда</div>
+                <div class="content-line__primary"></div>
+                <div class="content-header">Тесты и опросы</div>
+                <div class="content-text">проверка и улучшение знаний о
+                    <div>компании, получение обратной связи</div>
+                </div>
+            </div>
+            <div class="content-right">
+                <div class="content-header">Каталог подарков</div>
+                <div class="content-text">получение сертификатов или средств на карту</div>
+                <div class="content-line__primary"></div>
+                <div class="content-header">Вывод средств</div>
+                <div class="content-text">ответы на часто задаваемые вопросы</div>
+            </div>
+        </div>
     </div>
+    <div class="control-panel">
+        <div class="control-panel-description">
+            <div class="control-panel-description__header">Панель управления</div>
+            <div class="subheader header-indent">Для администраторов</div>
+            <div class="content-header">Модерирование приложения</div>
+            <div class="content-text">возможность управлять и контролировать различные функции приложения</div>
+            <div class="content-line__secondary"></div>
+            <div class="content-header">Проверка чеков</div>
+            <div class="content-text">модерация и автоматическая проверка через Федеральную налоговую службу</div>
+            <div class="content-line__secondary"></div>
+            <div class="content-header">Призовые выплаты</div>
+            <div class="content-text">автоматическая и ручная выплата призового фонда</div>
+            <div class="content-line__secondary"></div>
+            <div class="content-header">Налоговый агент</div>
+            <div class="content-text">управление налоговой информацией и процессами подготовки и отправки актов</div>
+        </div>
+    </div>
+    <div class="integration">
+        <div class="integration-wrapper">
+            <img src="/assets/img/power-bi.png" alt="power-bi">
+            <div class="integration-wrapper__container">
+                <div class="integration-tittle headers-color">Интеграция</div>
+                <div class="integration-header">Pryanik x Power Bi</div>
+                <div class="integration-content">Мгновенная аналитика в программе, которая позволяет быстро получить информацию о продажах в виде дашбордов</div>
+            </div>
+        </div>
+    </div>
+    <div class="additional"></div>
 </div>
 <script type="module" src="/app.js"></script>
 </body>
