--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
     <div class="control-panel">
         <div class="control-panel-description">
-            <div class="control-panel-description__header">Панель управления</div>
+            <div class="control-panel-description__header p-8npm run">Панель управления</div>
             <div class="subheader header-indent">Для администраторов</div>
             <div class="content-header">Модерирование приложения</div>
             <div class="content-text">возможность управлять и контролировать различные функции приложения</div>
