--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="our-solves">Мы решили эти задачи</div>
         </div>
         <div class="slider-wrap">
-            <div class="slider slider_motul">
+            <div class="slider__primary slider_motul">
                 <svg xmlns="http://www.w3.org/2000/svg" width="92" height="21" fill="none">
                     <path fill="#fff"
                           d="M23.61 0v19.391h-6.39l.354-8.461-3.477 8.461h-4.26L8.62 10.805l-2.062 8.57H0L5.36 0h6.95l1.082 7.877L16.494 0h7.117ZM59.5 6.159l-2.831-.125-1.452 13.357h-6.863l1.562-13.33-2.607.098L42.93 0H60.1l-.6 6.159ZM68.554.78l-1.317 11.795c-.041.713.276 1.425.897 1.728.64.244 1.438.146 1.937-.345.438-.388.599-.914.719-1.465L72.363.78h6.748l-1.456 12.993c-.32 1.852-1.16 3.604-2.775 4.786-2.337 1.727-5.45 1.991-8.463 1.566-2.393-.45-5.127-2.038-5.907-4.52-.338-.895-.279-1.971-.279-2.949L61.629.78h6.925ZM86.453 13.765H92l-1.635 6.004H78.55L81.005.78h7.021l-1.573 12.985Z"/>
@@ -83,7 +83,7 @@
                     <a class="slider__link" href="/">Посмотреть кейс</a>
                 </div>
             </div>
-            <div class="slider slider_liqui">
+            <div class="slider__primary slider_liqui">
                 <svg xmlns="http://www.w3.org/2000/svg" width="84" height="54" fill="none">
                     <path fill="#fff" fill-rule="evenodd"
                           d="M51.228 29.905h6.396v17.243h7.65v5.455H51.228M60.948 29.905h7.399l3.887 6.709 3.763-6.709h7.398l-8.151 12.1v10.598h-6.082V42.006M.252 29.905h5.58l6.02 8.59 5.894-8.59h5.643v22.698h-5.643V38.118l-5.393 7.211H11.35l-5.517-7.211v14.485H.252M24.679 41.254c0-6.684 5.642-12.101 12.602-12.101 6.961 0 12.604 5.417 12.604 12.1 0 6.684-5.643 12.103-12.604 12.103-6.96 0-12.602-5.419-12.602-12.102Zm6.646 0c0-3.636 2.667-6.584 5.956-6.584 3.29 0 5.957 2.948 5.957 6.584 0 3.636-2.666 6.583-5.957 6.583-3.29 0-5.956-2.947-5.956-6.584ZM15.196 1.187h6.396v22.698h-6.396M73.447 1.187h6.458v22.698h-6.458M.252 1.187h5.79v17.306h7.586v5.392H.252M50.31 1.187h6.332v14.296c0 2.147 1.852 3.887 4.14 3.887 2.284 0 4.138-1.74 4.138-3.887V1.187h6.269l.02 16.365s-.02 7.023-10.428 7.023c-10.41 0-10.472-7.023-10.472-7.023M44.205 26.143l-2.555-2.79a12.972 12.972 0 0 1-5.648 1.28c-6.962 0-12.604-5.418-12.604-12.102C23.398 5.848 29.04.43 36.002.43c6.96 0 12.602 5.419 12.602 12.102 0 3.027-1.157 5.794-3.07 7.917l3.25 3.437m-9.562-10.032 1.912 1.944c.5-.964.825-2.075.825-3.266 0-3.637-2.668-6.583-5.957-6.583-3.29 0-5.957 2.946-5.957 6.583 0 3.636 2.667 6.584 5.957 6.584.573 0 1.112-.105 1.63-.278l-2.58-2.852"
@@ -96,7 +96,7 @@
                     <a class="slider__link" href="/">Посмотреть кейс</a>
                 </div>
             </div>
-            <div class="slider slider_knauf">
+            <div class="slider__primary slider_knauf">
                 <svg xmlns="http://www.w3.org/2000/svg" width="93" height="60" fill="none">
                     <g clip-path="url(#a)">
                         <path fill="#fff"
@@ -114,7 +114,7 @@
                     <a class="slider__link" href="/">Посмотреть кейс</a>
                 </div>
             </div>
-            <div class="slider slider_sika">
+            <div class="slider__primary slider_sika">
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="60" fill="none">
                     <path fill="#EAF0FF"
                           d="M65.788 35.168c.561 0 1.123.139 1.685.416.561.278.983.694 1.263 1.249.281.555.422 1.11.422 1.665 0 .554-.14 1.11-.422 1.664-.28.555-.702.971-1.263 1.249a3.775 3.775 0 0 1-1.685.416 3.775 3.775 0 0 1-1.685-.416 2.739 2.739 0 0 1-1.264-1.249c-.281-.555-.422-1.11-.422-1.664 0-.555.14-1.11.422-1.665.28-.555.702-.971 1.264-1.249a3.775 3.775 0 0 1 1.685-.416Zm0 .555c-.492 0-.913.139-1.405.347-.42.208-.772.555-1.053 1.04-.28.486-.35.902-.35 1.388 0 .485.14.97.35 1.387.281.416.632.763 1.053 1.04.422.278.913.347 1.405.347.491 0 .983-.139 1.404-.347a3.74 3.74 0 0 0 1.053-1.04c.28-.416.351-.902.351-1.387 0-.486-.14-.972-.351-1.388a3.74 3.74 0 0 0-1.053-1.04c-.492-.208-.913-.347-1.404-.347Zm-1.475 4.647v-3.607h1.264c.421 0 .772 0 .913.07.21.07.35.208.491.346.14.14.14.347.14.555 0 .278-.07.486-.28.694-.21.208-.421.278-.773.347.14.07.211.139.281.208.14.139.351.347.562.694l.421.693h-.702l-.35-.555c-.282-.416-.492-.693-.633-.832-.14-.07-.28-.139-.491-.139h-.351v1.526h-.492Zm.562-2.011h.702c.351 0 .562-.07.702-.139.14-.07.21-.208.21-.416 0-.139 0-.208-.07-.278-.07-.069-.14-.138-.28-.208-.14-.07-.281-.07-.562-.07h-.702v1.11ZM35.035 0 70 60H0L35.035 0Z"/>
@@ -129,7 +129,7 @@
                     <a class="slider__link" href="/">Посмотреть кейс</a>
                 </div>
             </div>
-            <div class="slider slider_empty">logo</div>
+            <div class="slider__primary slider_empty">logo</div>
         </div>
     </div>
     <div class="app-personalisation">
@@ -199,11 +199,46 @@
             <div class="integration-wrapper__container">
                 <div class="integration-tittle headers-color">Интеграция</div>
                 <div class="integration-header">Pryanik x Power Bi</div>
-                <div class="integration-content">Мгновенная аналитика в программе, которая позволяет быстро получить информацию о продажах в виде дашбордов</div>
+                <div class="integration-content">Мгновенная аналитика в программе, которая позволяет быстро получить
+                    информацию о продажах в виде дашбордов
+                </div>
             </div>
         </div>
     </div>
-    <div class="additional"></div>
+    <div class="additional">
+        <div class="additional-container headers-color">
+            <div class="additional-container__title">Дополнительные возможности</div>
+            <div class="additional-container__header">Модули, которые можно подключить</div>
+            <div class="additional-container__content">Текст-описание небольшое, но очень интересное, возможно в
+                несколько строк, но тут уж как наберется.</div>
+        </div>
+        <div class="slider-wrap">
+            <div class="slider__secondary">
+                <img src="/assets/img/friend.png" class="slider__secondary-img" alt="">
+                <div class="slider__secondary-header">Пригласи друга</div>
+                <div class="slider__secondary-text">Возможность начисления дополнительных баллов с помощью промокода</div>
+            </div>
+            <div class="slider__secondary">
+                <img src="/assets/img/registration.png" class="slider__secondary-img" alt="">
+                <div class="slider__secondary-header">Регистрация накладных</div>
+                <div class="slider__secondary-text">Возможность загрузить накладную в приложение через фото</div>
+            </div>
+            <div class="slider__secondary">
+                <img src="/assets/img/actions.png" class="slider__secondary-img" alt="">
+                <div class="slider__secondary-header">Акции</div>
+                <div class="slider__secondary-text">создание определенных условий и настройка по регионам</div>
+            </div>
+            <div class="slider__secondary">
+                <img src="/assets/img/presents.png" class="slider__secondary-img" alt="">
+                <div class="slider__secondary-header">Каталог подарков</div>
+                <div class="slider__secondary-text">призы от компании. Подключена курьерская служба СДЭК</div>
+            </div>
+            <div class="slider__secondary">
+                <div class="slider__secondary-header">Пятый, походу</div>
+                <div class="slider__secondary-text">Здесь должен был быть текст описание, но его тут нет.</div>
+            </div>
+        </div>
+    </div>
 </div>
 <script type="module" src="/app.js"></script>
 </body>
